--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Hello World</h1>
+<!doctype html>
+<head></head>
+<body>
+  <h1>Real-Time Height-Field Water Rendering with Caustics</h1>
+  <p>Team members: Kevin Tan Kang Rui (1001494) & Tasya Aditya Rukmana (1001694)</p>
+  
+  <h2></h2>
+</body>
+</html>
