--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <body>
   <h1>Real-Time Height-Field Water Rendering with Caustics</h1>
   <p>Team members: Kevin Tan Kang Rui (1001494) & Tasya Aditya Rukmana (1001694)</p>
+  <p>Full report available at: https://docs.google.com/document/d/1J0JFQBocZKXHsfKvhI3bUPKWgvPkwChRKdZ3gLohKkc/edit?usp=sharing</p>
   
-  <h2></h2>
+  <h2>Introduction</h2>
+  <p>Our project aims to do a realistic water rendering by adding caustics and using Height-Field for surface simulation. Our project is implemented using Unity as the engine and CG shaders to perform calculation for height-field, reflection, refraction and caustics.</p>
+
+  <h2>Demo</h2>
+  <div class="embed-container">
+    <iframe width="500" height="281" src="https://youtu.be/KE-L8Vh8204"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
+
+  <h2>Changes Made Since Presentation</h2>
+  <p>We have implemented the water reflection and refraction correctly in this iteration. We have also changed our pool structure from using 5 separate planes as its walls and floors to using a cube and using a cubemap to sample textures from.</p>
 </body>
 </html>
