fix yotube embed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <h2>Demo</h2>
   <div class="embed-container">
-    <iframe width="500" height="281" src="https://youtu.be/KE-L8Vh8204"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/KE-L8Vh8204" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
 
   <h2>Changes Made Since Presentation</h2>
