Updated index page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
   <p>Full report available <a href="https://docs.google.com/document/d/1J0JFQBocZKXHsfKvhI3bUPKWgvPkwChRKdZ3gLohKkc/edit?usp=sharing">here</a></p>
   
   <h2>Introduction</h2>
-  <p>Our project aims to do a realistic water rendering by adding caustics and using Height-Field for surface simulation. Our project is implemented using Unity as the engine and CG shaders to perform calculation for height-field, reflection, refraction and caustics.</p>
-
+  <p>Our project aims to do a realistic water rendering by adding caustics and using Height-Field for the physical simulation of the water surface. Our project is implemented using Unity as the engine and CG shaders to perform calculation for height-field, reflection, refraction and caustics.</p>
+  <h2>Cubemap used</h2>
+  <img src="https://i.imgur.com/WRL6dkn.jpg"/>
+  <p>This is the cubemap we created using Blender.</p>
+  <h2>Scene view</h2>
+  <img src="https://i.imgur.com/KBX3T23.jpeg"/>
+  <img src="https://i.imgur.com/s9J7G8n.jpeg"/>
+  <p>The top and bottom view of the cube show the reflection and refraction applied in real time.</p>
   <h2>Demo</h2>
   <div class="embed-container">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/KE-L8Vh8204" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
